Fix date icon misalignment in Query History list by date view

--- a/js-i2b2/cells/CRC/assets/QueryHistory.css
+++ b/js-i2b2/cells/CRC/assets/QueryHistory.css
@@ -23,6 +23,10 @@
     z-index: 1000;
 }
 
+#i2b2QueryHistoryBar .gj-icon {
+    top: 9px !important;
+}
+
 
 #i2b2TreeviewQueryHistory .history-container {
     position: absolute;
